--- a/Workers/Workers.Web/Views/Shared/_Layout.cshtml
+++ b/Workers/Workers.Web/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                                     <a class="nav-link text-dark" asp-area="Admin" asp-controller="Admin" asp-action="GetAll">Admin</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="EmployeesRole" asp-action="GetAll">EmployeesRole</a>
+                                    <a class="nav-link text-dark" asp-area="Admin" asp-controller="EmployeesRole" asp-action="GetAll">EmployeesRole</a>
                                 </li>
                             }
                         }
